--- a/src/Wlabs.Domain/Wlabs.Domain.csproj
+++ b/src/Wlabs.Domain/Wlabs.Domain.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
+    <PackageReference Include="MongoDB.Bson" Version="2.19.2" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
     <PackageReference Include="NetDevPack" Version="6.1.0" />
   </ItemGroup>
 
