--- a/src/Wlabs.Services.Api/appsettings.json
+++ b/src/Wlabs.Services.Api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoSettings": {
+    "Connection": "mongodb://root:6HHIV8BNb4*C%5E3Ad%23OV0bsjBipi3%2628Z53x*jrLu5UGT%40%401j!3@mongo-primario:27017",
+    "DatabaseName": "wlabs"
+  }
 }
