--- a/src/Wlabs.Domain/Wlabs.Domain.csproj
+++ b/src/Wlabs.Domain/Wlabs.Domain.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MongoDB.Bson" Version="2.19.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
     <PackageReference Include="NetDevPack" Version="6.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
