--- a/src/Wlabs.Infra.CrossCutting.Json/Wlabs.Infra.CrossCutting.Json.csproj
+++ b/src/Wlabs.Infra.CrossCutting.Json/Wlabs.Infra.CrossCutting.Json.csproj
@@ -7,12 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Wlabs.Domain\Wlabs.Domain.csproj" />
-    <ProjectReference Include="..\Wlabs.Infra.CrossCutting.Json\Wlabs.Infra.CrossCutting.Json.csproj" />
   </ItemGroup>
 
 </Project>
