--- a/src/Wlabs.Infra.CrossCutting.Http/Wlabs.Infra.CrossCutting.Http.csproj
+++ b/src/Wlabs.Infra.CrossCutting.Http/Wlabs.Infra.CrossCutting.Http.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Wlabs.Domain\Wlabs.Domain.csproj" />
+    <ProjectReference Include="..\Wlabs.Infra.CrossCutting.Json\Wlabs.Infra.CrossCutting.Json.csproj" />
   </ItemGroup>
 
 </Project>
