--- a/src/Wlabs.Services.ViaCep/Dockerfile
+++ b/src/Wlabs.Services.ViaCep/Dockerfile
@@ -10,6 +10,7 @@ COPY Wlabs.Infra.Data/*.csproj ./Wlabs.Infra.Data/
 COPY Wlabs.Infra.CrossCutting.IoC/*.csproj ./Wlabs.Infra.CrossCutting.IoC/
 COPY Wlabs.Infra.CrossCutting.Bus/*.csproj ./Wlabs.Infra.CrossCutting.Bus/ 
 COPY Wlabs.Infra.CrossCutting.Json/*.csproj ./Wlabs.Infra.CrossCutting.Json/ 
+COPY Wlabs.Infra.CrossCutting.Http/*.csproj ./Wlabs.Infra.CrossCutting.Http/ 
 COPY Wlabs.Domain/*.csproj ./Wlabs.Domain/ 
 COPY Wlabs.Application/*.csproj ./Wlabs.Application/ 
 #
@@ -23,6 +24,7 @@ COPY Wlabs.Infra.Data/. ./Wlabs.Infra.Data/
 COPY Wlabs.Infra.CrossCutting.IoC/. ./Wlabs.Infra.CrossCutting.IoC/ 
 COPY Wlabs.Infra.CrossCutting.Bus/. ./Wlabs.Infra.CrossCutting.Bus/ 
 COPY Wlabs.Infra.CrossCutting.Json/. ./Wlabs.Infra.CrossCutting.Json/ 
+COPY Wlabs.Infra.CrossCutting.Http/. ./Wlabs.Infra.CrossCutting.Http/ 
 COPY Wlabs.Domain/. ./Wlabs.Domain/ 
 COPY Wlabs.Application/. ./Wlabs.Application/ 
 #
