--- a/src/Wlabs.Services.ApiCep/appsettings.json
+++ b/src/Wlabs.Services.ApiCep/appsettings.json
@@ -10,5 +10,6 @@
   "MongoSettings": {
     "Connection": "mongodb://root:6HHIV8BNb4*C%5E3Ad%23OV0bsjBipi3%2628Z53x*jrLu5UGT%40%401j!3@mongo-primario:27017",
     "DatabaseName": "wlabs"
-  }
+  },
+  "ApiCepEndpoint": "https://cdn.apicep.com/file/apicep/{0}.json"
 }
