--- a/src/Wlabs.Services.ViaCep/appsettings.json
+++ b/src/Wlabs.Services.ViaCep/appsettings.json
@@ -10,5 +10,6 @@
   "MongoSettings": {
     "Connection": "mongodb://root:6HHIV8BNb4*C%5E3Ad%23OV0bsjBipi3%2628Z53x*jrLu5UGT%40%401j!3@mongo-primario:27017",
     "DatabaseName": "wlabs"
-  }
+  },
+  "ViaCepEndpoint": "https://viacep.com.br/ws/{0}/json/"
 }
