--- a/src/Wlabs.Services.ApiCep/Wlabs.Services.ApiCep.csproj
+++ b/src/Wlabs.Services.ApiCep/Wlabs.Services.ApiCep.csproj
@@ -13,16 +13,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjectionFixed" Version="5.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Wlabs.Application\Wlabs.Application.csproj" />
     <ProjectReference Include="..\Wlabs.Infra.CrossCutting.IoC\Wlabs.Infra.CrossCutting.IoC.csproj" />
     <ProjectReference Include="..\Wlabs.Infra.Data\Wlabs.Infra.Data.csproj" />
+    <ProjectReference Include="..\Wlabs.Services.Core\Wlabs.Services.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
