--- a/src/Wlabs.Services.ViaCep/appsettings.json
+++ b/src/Wlabs.Services.ViaCep/appsettings.json
@@ -11,5 +11,12 @@
     "Connection": "mongodb://root:6HHIV8BNb4*C%5E3Ad%23OV0bsjBipi3%2628Z53x*jrLu5UGT%40%401j!3@mongo-primario:27017",
     "DatabaseName": "wlabs"
   },
-  "ViaCepEndpoint": "https://viacep.com.br/ws/{0}/json/"
+  "ViaCepEndpoint": "https://viacep.com.br/ws/{0}/json/",
+  "ElasticsearchSettings": {
+    "uri": "http://elasticsearch:9200",
+    "defaultIndex": "logs",
+    "username": "wlabs",
+    "password": "0V4ZFwxqX9ArHgo3rf8oUXkUmR06OvZaLNkAGIclq58B3zJIek"
+  },
+  "RedisConfiguration": "redis:6379,password=dBja9y0cVkcl9Utw009bsSCt1dFAh0JqQ1FORQi7Yod68AXRrn,connectTimeout=2000"
 }
