--- a/src/Wlabs.Domain/Wlabs.Domain.csproj
+++ b/src/Wlabs.Domain/Wlabs.Domain.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
     <PackageReference Include="NetDevPack" Version="6.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
 </Project>
