feat: criacao do ultimo endpoint de consulta por cep

--- a/config/api-balancer/nginx.conf
+++ b/config/api-balancer/nginx.conf
@@ -1,6 +1,7 @@
 upstream wlabs-api {  
    server wlabs-via-cep:8080;   
-   server wlabs-api-cep:8080 backup;
+   server wlabs-awesome-api:8080;
+   server wlabs-api-cep:8080;
 }
 
 
