--- a/src/Wlabs.Application/Wlabs.Application.csproj
+++ b/src/Wlabs.Application/Wlabs.Application.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Wlabs.Domain\Wlabs.Domain.csproj" />
+    <ProjectReference Include="..\Wlabs.Infra.CrossCutting.Encryption\Wlabs.Infra.CrossCutting.Encryption.csproj" />
+    <ProjectReference Include="..\Wlabs.Infra.CrossCutting.Jwt\Wlabs.Infra.CrossCutting.Jwt.csproj" />
   </ItemGroup>
 
 </Project>
