--- a/src/Wlabs.Domain/Wlabs.Domain.csproj
+++ b/src/Wlabs.Domain/Wlabs.Domain.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Wlabs.Infra.CrossCutting.Encryption\Wlabs.Infra.CrossCutting.Encryption.csproj" />
+  </ItemGroup>
+
 </Project>
