--- a/src/Wlabs.Services.Core/Wlabs.Services.Core.csproj
+++ b/src/Wlabs.Services.Core/Wlabs.Services.Core.csproj
@@ -12,9 +12,11 @@
     <PackageReference Include="Elastic.Apm.SerilogEnricher" Version="8.6.0" />
     <PackageReference Include="Elastic.CommonSchema.Serilog" Version="8.6.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjectionFixed" Version="5.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.30.1" />
     <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
@@ -27,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Wlabs.Application\Wlabs.Application.csproj" />
     <ProjectReference Include="..\Wlabs.Infra.CrossCutting.IoC\Wlabs.Infra.CrossCutting.IoC.csproj" />
+    <ProjectReference Include="..\Wlabs.Infra.CrossCutting.Jwt\Wlabs.Infra.CrossCutting.Jwt.csproj" />
   </ItemGroup>
 
 </Project>
