--- a/src/Wlabs.Services.ViaCep/appsettings.json
+++ b/src/Wlabs.Services.ViaCep/appsettings.json
@@ -18,5 +18,9 @@
     "username": "wlabs",
     "password": "0V4ZFwxqX9ArHgo3rf8oUXkUmR06OvZaLNkAGIclq58B3zJIek"
   },
-  "RedisConfiguration": "redis:6379,password=dBja9y0cVkcl9Utw009bsSCt1dFAh0JqQ1FORQi7Yod68AXRrn,connectTimeout=2000"
+  "RedisConfiguration": "redis:6379,password=dBja9y0cVkcl9Utw009bsSCt1dFAh0JqQ1FORQi7Yod68AXRrn,connectTimeout=2000",
+  "JwtConfiguration": {
+    "secret": "Tq1*0lQoEv$6QD*K2j*C78UWnM2zxG*@lrb3oz*p&srizn4b#q",
+    "uri": "http://wlabs-auth:8090"
+  }
 }
